--- a/ComputeShader/ComputeShader.vcxproj
+++ b/ComputeShader/ComputeShader.vcxproj
@@ -174,6 +174,7 @@
     <ClInclude Include="Teapot.h" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="comp3.glsl" />
     <None Include="compute.glsl" />
     <None Include="compute2.glsl" />
     <None Include="Compute3.glsl" />
